# nokta

./: .gitignore  ARCHITECTURE_SUMMARY.txt  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  VIDEO_INTEGRATION_GUIDE.md  backup.sh  build-apps.sh  build.sh  cloud-init.yaml  htmx4.md  install.sh  msg-plan.md  plan-unread.md  plan.md  project.md  run.md  server-prep.sh  tests.md  update.sh
.claude/: settings.local.json
admin/: README.md  package.json
admin/src/: App.tsx
backend/: .env.example  README.md  fcm-service.ts  package-lock.json  package.json  reset-and-setup.sh  reset.sh  seed_demo.sql  setup-output.txt  setup-test-data.js  tsconfig.json
backend/pb_data/: auxiliary.db  data.db
backend/pb_hooks/: auth_logging.pb.js  auto_create_chats.pb.js  chat_hooks.pb.js  cleanup_expired_invites.pb.js  cleanup_stale_calls.pb.js  daily.pb.js  invitations.pb.js  nokta.pb.js  stats.pb.js
backend/pb_migrations/: 1730000000_consolidated_schema.js  1730000000_schema.js  1730745000_consolidated_schema.js  1730745000_created_spaces.js  1730745000_initial_schema.js  1730745001_configure_access_rules.js  1730745001_created_space_members.js  1730745002_add_constraints.js  (+57 more)
docs/: 9ui.md  base-ui.md  daily-react.md  nanostores.md  wouter.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
native-app/: .gitignore  README.md  entitlements.mac.plist  package-lock.json  package.json
native-app/src-tauri/: Cargo.toml  tauri.conf.json
native-app/src-tauri/capabilities/: default.json
native-app/src-tauri/src/: lib.rs  main.rs
(+422 files in other folders)
